// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ReplyCommentForm
  disabled={false}
  disabledMessage="closed"
  id="comment-id"
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteConfig={Object {}}
  rteRef={[Function]}
  siteID="site-id"
/>
`;

exports[`renders when commenting has been disabled 1`] = `
<ReplyCommentForm
  disabled={true}
  disabledMessage="commenting disabled"
  id="comment-id"
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteConfig={Object {}}
  rteRef={[Function]}
  siteID="site-id"
/>
`;

exports[`renders when story has been closed 1`] = `
<ReplyCommentForm
  disabled={true}
  disabledMessage="story closed"
  id="comment-id"
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteConfig={Object {}}
  rteRef={[Function]}
  siteID="site-id"
/>
`;

exports[`renders with initialValues 1`] = `
<ReplyCommentForm
  disabled={false}
  disabledMessage="closed"
  id="comment-id"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onCancel={[Function]}
  onChange={[Function]}
  onSubmit={[Function]}
  parentUsername="Joe"
  rteConfig={Object {}}
  rteRef={[Function]}
  siteID="site-id"
/>
`;
